--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
